# todo_app_hackathon_2

./: .dockerignore  .gitignore  .helmignore  CLAUDE.md  DEPLOYMENT_VERIFICATION.md  FINAL_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SOLUTION.md  PROPER_INTEGRATION_SUMMARY.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md  docker-compose-no-volumes.yml  docker-compose.yml  package-lock.json  postgres-deployment-only.yaml  postgres-deployment.yaml  pyproject.toml  pyproject.toml.bak  railway.toml  run_app.py  start_backend.bat  start_backend.sh  test_deployed_backend.py  test_todo_app.py  vercel.json
.claude/: settings.local.json  skills.md
.claude/skills/: code-tester-skill.md  feature-integrator-skill.md  spec-refiner-skill.md
.claude/subagents/: implementation_agent.md  main_orchestrator.md  planning_agent.md  review_agent.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  Dockerfile.simple  app_entry.py  app_runner.py  docker-compose.yml  main.py  requirements.txt  run_server.py  start.sh  test_api.py  test_db_connection.py  test_hash_and_db.py
backend/app/: main.py
backend/app/auth/: jwt.py  (+1 more)
backend/migrations/: create_tables.py
backend/src/: main.py
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.js  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: chat.css  layout.tsx  page.tsx
frontend/components/: ClientWrapper.tsx  FloatingChatbot.tsx
frontend/lib/: api.ts  auth-server.ts  auth.tsx  types.ts
helm/todo-chatbot/: Chart.yaml  values.yaml
history/adr/: 001-containerization-and-orchestration-approach.md  002-ai-assisted-operations-approach.md  003-configuration-management-approach.md
mcp-server/: requirements.txt
mcp-server/src/: server.py
specs/: architecture.md  constitution.md  data-model.md  overview.md  plan.md  research.md
specs/001-k8s-deployment-specs/: aiops.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/master/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/ui/: pages.md
src/: __init__.py  main.py
src/models/: __init__.py  task.py
src/services/: todo_list.py
src/ui/: console_menu.py
(+69 files in other folders)
