[project]
name = "todo-app-backend"
version = "1.0.0"
description = "Todo app backend service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ghulam Akber", email = "akabarghulam47@gmail.com" }
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"