[project]
name = "todo-backend"
version = "1.0.0"
description = "Todo app backend service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ghulam Akber", email = "akabarghulam47@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-jwt>=4.1.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0"
]

[project.scripts]
start-backend = "backend.app.main:start_server"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"